[package]
name = "qcos"
version = "0.1.6-rc.3"
edition = "2021"
authors = ["bujnlc8 <75124771@qq.com>"]
description = "[FORK] provide basic interface encapsulation of Tencent Cloud Object Storage (cos)"
repository = "https://github.com/gaoqiangz/qcos"
license = "MIT"
keywords = ["cos", "tengxunyun", "tencentcloud"]

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
ring = "0.16.20"
urlencoding = "2.1.0"
sha1 = "0.10.1"
mime = "0.3.16"
bytes = "1.1.0"
quick-xml = { version = "0.23.0-alpha3", features = ["serialize"] }
async-trait = "0.1.56"
tokio = "1.2.0"
tokio-util = { version = "0.7.10", features = ["io"] }
async-speed-limit = { version = "0.4.1", features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1.2.0", features = ["full"] }
